23-Jul-2015 Laurent Duflot
	* ZeroLeptonSR, ZeroLeptonCRZ, ZeroLeptonCRWT: code cleanup


22-Jul-2015 Laurent Duflot
	* FilterUpdateMerge.py, getMCInfo.py: add protections for signal samples
	* getMCInfo.py: better treatment of signal samples with derivation
	(still not 100% correct for complex sample with multiple processes)

20-Jul-2015 Laurent Duflot
	* python: add scripts to validate production: running on all files,
	look for duplicate events
	* INSTALL: new version of cafe

18-Jul-2015 Laurent Duflot
	* FilterUpdateMerge.py, getMCInfo.py: skip samples with no cross-section available


16-Jul-2015 Laurent Duflot
	* JobBookeeping, config files: don't do the derivation bookeeping
	for data as there is a bug in data processing

15-Jul-2015 Laurent Duflot
	* launch_jobs_on_grid.py: automatically recognize all supported
	derivations from sample name
	* ZeroLeptonCRZ.cxx : fix for two isolated signal leptons
	* makeDatasetList.py: make sure the default dataType matches only SUSY1 and not SUSY10
	* mc15_13TeV_MCSampleList.py: add PowhegPythia8 W and Z samples as alternative samples
	* data/*forEPS*: update list of samples for EPS
	* tagged as ZeroLeptonRun2-00-00-44

15-Jul-2015 Geraldine Conti
	* ZeroLeptonCRWT.cxx and ZeroLeptonCRZ.cxx : apply lepSF to total weight
	* ZeroLeptonCRWT.cxx and ZeroLeptonCRZ.cxx : changed HLT_mu40 to HLT_mu50
	* ZeroLeptonCRY.cxx : added lines for photon SF (still commented out - needs fixing)
	* ZeroLeptonCRZ.cxx : ask for two isolated signal leptons in CRZ


14-Jul-2015 Laurent Duflot
	* PileUpRWProcessor, config file, data/: update pileup reweighting
	to apply PRW to 50ns mc15


14-Jul-2015 Geraldine Conti
	* PhysObjProxyFiller.cxx: added b-jet requirements (pT>40, |eta|<2.5)
	* ZeroLeptonCRWT.cxx and ZeroLeptonCRZ.cxx : add leptonID in lep1sign/lep2sign variables
	* Added lepton SF as decoration to the muon/electron


14-Jul-2015 Marija Vranjes Milosavljevic
	* adding p2372 MC list used for EPS results